[package]
name = "bittenoff"
version = "0.1.0"
authors = ["Jose Joaquin Talon <talon.joaquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.13.2", features = ["vulkan", "no-slow-safety-checks"]}
serde = "1.0.102"
ron = "0.5.1"
uuid = {version = "0.8.1", features = ["v4"]}
angular = "0.1.1"
rand = "0.7.2"
pathfinding = "2.0.0"
tiled = "0.8.1"
num-derive = "0.3.0"
num = "0.2.0"
num-traits = "0.2.10"
fps_counter = "1.0.0"
noise = "0.6.0"
